<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnStudents"
        android:layout_width="159dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        android:text="@string/students"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTeachers"
        android:layout_width="181dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:text="@string/teachers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCourses" />

    <Button
        android:id="@+id/btnCourses"
        android:layout_width="179dp"
        android:layout_height="98dp"
        android:layout_marginTop="56dp"
        android:text="@string/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudents" />
</androidx.constraintlayout.widget.ConstraintLayout>